Bug 393893 - Cannot disable week numbers in date navigator
Summary: Cannot disable week numbers in date navigator
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-06 00:14 UTC by Ronald McCollam
Modified: 2025-05-04 14:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronald McCollam 2018-05-06 00:14:03 UTC
The week numbers beside every week in the date navigator add a huge amount of visual clutter (e.g. "17/18", "18/19", "19/20", etc. next to each week) and are not useful to me.  Being able to hide the week numbers would make this view far more useful to me and reclaim the space of ~15 characters per line (for 3 months) giving the useful part of the calendars far more space.
Comment 1 Allen Winter 2018-05-07 20:53:31 UTC
kinda like this idea.
I don't remember why we have "17/18" instead of "17" either
haven't looked at the date navigator code in a long time.
Comment 2 Bug Janitor Service 2025-05-04 11:55:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/200
Comment 3 Allen Winter 2025-05-04 14:27:55 UTC
Git commit 0a46bad670ba712815007914ef81ca082208994b by Allen Winter.
Committed on 04/05/2025 at 14:23.
Pushed by winterz into branch 'master'.

DateNavigator - add option to show/hide the week number buttons
FIXED-IN: 6.5.0

M  +1    -0    src/prefs/koprefsdialogviews.cpp
M  +6    -1    src/settings/korganizer.kcfg
M  +17   -3    src/widgets/kdatenavigator.cpp
M  +1    -0    src/widgets/kdatenavigator.h

https://invent.kde.org/pim/korganizer/-/commit/0a46bad670ba712815007914ef81ca082208994b