DateNavigator - add option to show/hide the week number buttons

BUG: 393893
FIXED-IN: 6.5.0