src/prefs/koprefsdialogviews.cpp
@@ -71,6 +71,7 @@ KOPrefsDialogViews::KOPrefsDialogViews(QObject *parent, const KPluginMetaData &d
     datenavLayout->addWidget(addWidBool(KOPrefs::instance()->weeklyRecurItem())->checkBox());
     datenavLayout->addWidget(addWidBool(KOPrefs::instance()->highlightTodosItem())->checkBox());
     datenavLayout->addWidget(addWidBool(KOPrefs::instance()->highlightJournalsItem())->checkBox());
+    datenavLayout->addWidget(addWidBool(KOPrefs::instance()->weekNumbersShowItem())->checkBox());
     datenavLayout->addWidget(addWidBool(KOPrefs::instance()->weekNumbersShowWorkItem())->checkBox());
     datenavBox->setLayout(datenavLayout);
     generalLayout->addWidget(datenavBox);
